--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.1.0",
+    "@studio-freight/lenis": "^1.0.42",
+    "framer-motion": "^12.4.10",
+    "gsap": "^3.12.7",
+    "lenis": "^1.2.3",
+    "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.479.0",
+    "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.1"
+    "react-scroll-parallax": "^3.4.5",
+    "sass": "^1.85.1",
+    "swiper": "^11.2.5",
+    "three": "^0.174.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4"
   }
