--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["app/*"]
+      "@/*": ["./app/*"],
+      "@styless/*": ["./app/components/styless/*"]
     }
-  }
+  },
+  "include": ["**/*"],
+  "exclude": ["node_modules"]
 }
