--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "@react-three/fiber": "^9.1.0",
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.4.10",
@@ -17,9 +20,10 @@
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-scroll-parallax": "^3.4.5",
+    "react-toastify": "^11.0.5",
     "sass": "^1.85.1",
     "swiper": "^11.2.5",
     "three": "^0.174.0",
